--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
+    "generate-docs": "yarn clean && yarn copy-libs && yarn add-tutorials",
+    "add-tutorials": "node src/docs-generator/tutorial-generator.mjs",
+    "clean": "node src/docs-generator/cleaner.mjs",
+    "copy-libs": "node src/docs-generator/code-copier.mjs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
@@ -18,14 +22,25 @@
     "@docusaurus/core": "2.3.1",
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
+    "bim-fragment": "^0.0.17",
+    "camera-controls": "^2.3.3",
     "clsx": "^1.2.1",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "three": "^0.150.1",
+    "three-mesh-bvh": "^0.5.23",
+    "web-ifc": "^0.0.39"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1",
-    "got": "^12.6.0"
+    "@types/three": "^0.149.0",
+    "docusaurus-plugin-typedoc": "^0.18.0",
+    "got": "^12.6.0",
+    "typedoc": "^0.23.28",
+    "typedoc-plugin-markdown": "^3.14.0",
+    "typedoc-plugin-no-inherit": "^1.4.0",
+    "typescript": "^5.0.2"
   },
   "browserslist": {
     "production": [
