--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@docusaurus/core": "2.3.1",
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
+    "@popperjs/core": "^2.11.7",
     "bim-fragment": "^0.0.17",
     "camera-controls": "^2.3.3",
     "clsx": "^1.2.1",
