Reimplement repository copying for doc generation

--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "docusaurus": "docusaurus",
     "start": "yarn generate-docs && docusaurus start",
     "build": "docusaurus build",
-    "generate-docs": "yarn clean && yarn copy-libs && yarn add-tutorials",
+    "generate-docs": "yarn clean && yarn copy-repos && yarn add-tutorials",
     "add-tutorials": "node src/docs-generator/tutorial-generator.mjs",
     "clean": "node src/docs-generator/cleaner.mjs",
-    "copy-libs": "node src/docs-generator/code-copier.mjs",
+    "copy-repos": "node src/docs-generator/repo-copier.mjs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "generate": "node src/scripts/doc-generator.mjs",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
