--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -1,30 +1,33 @@
-name: Update projects documentation
+name: Generate documentation
 
 on:
   schedule:
     - cron: '0 0 * * *'  # Launch this workflow everyday at midnight
 
 jobs:
-  compare-tags:
+  generate-docs:
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x]
 
     steps:
       - name: Check out code
         uses: actions/checkout@v3
 
-      - name: Get latest tag of workflow repo
-        id: get-latest-tag-workflow-repo
-        run: |
-          echo "::set-output name=tag::$(git describe --tags `git rev-list --tags --max-count=1`)"
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
 
-      - name: Read repositories.txt and compare tags
-        run: |
-          while read repo; do
-            echo "Checking latest release for $repo..."
-            tag=fromJson($(gh api repos/$repo/releases/latest))
-            if [ "$tag" != "${{ steps.get-latest-tag-workflow-repo.outputs.tag }}" ]; then
-              echo "Latest release of $repo ($tag) differs from workflow repo (${{ steps.get-latest-tag-workflow-repo.outputs.tag }})"
-            else
-              echo "Tags are the same"
-            fi
-          done < repositories.txt
+      - name: Build documentation
+        run: yarn generate-build
+
+#       - name: Create PR with updated documentation
+#         run: | 
+#           gh pr create -B main \
+#              --title 'chore(docs): generate documentation' \
+#              --body 'Automated PR'
+#         env:
+#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
