Switch src/ dir for fallback branch config in repo-copier.js

--- a/src/docs-generator/tsconfig.json
+++ b/src/docs-generator/tsconfig.json
@@ -81,5 +81,8 @@
   "include": [
     "../../temp/**/*"
   ],
-  "exclude": ["../../temp/**/*.test.ts"]
+  "exclude": [
+    "../../temp/**/*.test.ts",
+    "../../temp/_repo/**/*"
+  ]
 }
