--- a/src/docs-generator/tsconfig.json
+++ b/src/docs-generator/tsconfig.json
@@ -82,7 +82,6 @@
     "../../temp/**/*"
   ],
   "exclude": [
-    "../../temp/**/*.test.ts",
-    "../../temp/_repo/**/*"
+    "../../temp/**/*.test.ts"
   ]
 }
