--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -24,10 +24,29 @@ jobs:
       - name: Build documentation
         run: yarn generate-build
 
-#       - name: Create PR with updated documentation
-#         run: | 
-#           gh pr create -B main \
-#              --title 'chore(docs): generate documentation' \
-#              --body 'Automated PR'
-#         env:
-#           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Check for changes
+        id: changes
+        run: |
+          git config --local user.name "github-actions[bot]"
+          git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add -A
+          git diff --quiet && git diff --staged --quiet || echo "changed=true"
+        shell: bash
+
+      - name: Commit and push if there were changes
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          git commit -m "Add newly generated documentation"
+          git push -f origin HEAD:actions-generate-docs
+
+      - name: Create PR with updated documentation
+        if: steps.changes.outputs.changed == 'true'
+        run: |
+          PR_EXISTS=$(gh pr view https://github.com/${{ github.repository }}/tree/automated-changes --json state -q '.state' || echo "no")
+          if [ "$PR_EXISTS" = "no" ]; then
+            gh pr create --base main --title "chore(docs): generate documentation" \
+              --body "This is an auto-generated PR for documentation updates made by GitHub Actions." \
+              --head actions-generate-docs
+          fi
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
