--- a/package.json
+++ b/package.json
@@ -24,19 +24,23 @@
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.11.7",
-    "bim-fragment": "^0.0.17",
+    "bim-fragment": "^1.0.7",
     "camera-controls": "^2.3.3",
+    "canvas": "^2.11.2",
     "clsx": "^1.2.1",
     "dexie": "^3.2.3",
+    "mapbox-gl": "^2.15.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "0.152.2",
     "three-mesh-bvh": "^0.5.23",
-    "web-ifc": "^0.0.39"
+    "web-ifc": "^0.0.42"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1",
+    "@types/mapbox-gl": "^2.7.11",
+    "@types/node-fetch": "^2.6.4",
     "@types/three": "0.152.1",
     "docusaurus-plugin-typedoc": "^0.19.2",
     "got": "^12.6.0",
