Add setting for GITHUB_TOKEN usage for repo-copier.mjs

--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Build documentation
         run: yarn generate-build
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Check for changes
         id: changes
