--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -35,7 +35,7 @@ jobs:
           git config --local user.name "github-actions[bot]"
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add -A
-          git diff --quiet && git diff --staged --quiet || echo "changed=true"
+          git diff --quiet && git diff --staged --quiet || echo "changed=true" >> "$GITHUB_OUTPUT"
         shell: bash
 
       - name: Commit and push if there were changes
