Implement updates watcher workflow (#2)
* Start implementing updates watcher workflow

* Reimplement repository copying for doc generation

* Update documentation generating workflow

* Switch src/ dir for fallback branch config in repo-copier.js

* Remove repositories.txt

* Copy directories instead of using symlinks

* Update workflow to handle PR creation

* Update docusaurus dependencies

* Fix errors in update-docs-projects workflow

* Add setting for GITHUB_TOKEN usage for repo-copier.mjs

* Remove fragment docs generation temporally

* Fix step output when checking for changes

* Run workflow when pushing commits to main branch

--- a/src/docs-generator/tsconfig.json
+++ b/src/docs-generator/tsconfig.json
@@ -68,9 +68,9 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "typedocOptions": {
-    "entryPoints": ["../../temp/components/index.ts", "../../temp/fragment/index.ts"],
+    "entryPoints": ["../../temp/components/index.ts"],
     "out": "./docs",
-    "readme": "../README.md",
+    "readme": "../../README.md",
     "name": "Open BIM Components",
     "excludeExternals": true,
     "excludePrivate": true,
@@ -81,5 +81,9 @@
   "include": [
     "../../temp/**/*"
   ],
-  "exclude": ["../../temp/**/*.test.ts"]
+  "exclude": [
+    "../../temp/**/*.test.ts",
+    "../../temp/**/*.spec.ts",
+    "../../temp/**/test/**/*"
+  ]
 }
