--- a/package.json
+++ b/package.json
@@ -4,17 +4,18 @@
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
-    "start": "yarn generate-docs && docusaurus start",
+    "start": "docusaurus start",
     "build": "docusaurus build",
-    "generate-docs": "yarn clean && yarn copy-libs && yarn add-tutorials",
+    "generate-start": "yarn generate-docs && yarn start",
+    "generate-build": "yarn generate-docs && yarn build",
+    "generate-docs": "yarn clean && yarn copy-repos && yarn add-tutorials",
     "add-tutorials": "node src/docs-generator/tutorial-generator.mjs",
     "clean": "node src/docs-generator/cleaner.mjs",
-    "copy-libs": "node src/docs-generator/code-copier.mjs",
+    "copy-repos": "node src/docs-generator/repo-copier.mjs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "generate": "node src/scripts/doc-generator.mjs",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids"
   },
@@ -23,24 +24,28 @@
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.11.7",
-    "bim-fragment": "^0.0.17",
+    "bim-fragment": "^1.0.7",
     "camera-controls": "^2.3.3",
+    "canvas": "^2.11.2",
     "clsx": "^1.2.1",
     "dexie": "^3.2.3",
+    "mapbox-gl": "^2.15.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "three": "0.152.2",
     "three-mesh-bvh": "^0.5.23",
-    "web-ifc": "^0.0.39"
+    "web-ifc": "^0.0.42"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "2.3.1",
+    "@types/mapbox-gl": "^2.7.11",
+    "@types/node-fetch": "^2.6.4",
     "@types/three": "0.152.1",
-    "docusaurus-plugin-typedoc": "^0.18.0",
+    "docusaurus-plugin-typedoc": "^0.19.2",
     "got": "^12.6.0",
-    "typedoc": "^0.23.28",
-    "typedoc-plugin-markdown": "^3.14.0",
+    "typedoc": "^0.24.8",
+    "typedoc-plugin-markdown": "^3.15.3",
     "typedoc-plugin-no-inherit": "^1.4.0",
     "typescript": "^5.0.2"
   },
