--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -1,8 +1,8 @@
 name: Generate documentation
 
 on:
-  schedule:
-    - cron: '0 0 * * *'  # Launch this workflow everyday at midnight
+  push:
+    branches: [ main ]
 
 jobs:
   generate-docs:
