--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@docusaurus/preset-classic": "2.3.1",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.11.7",
-    "bim-fragment": "^1.0.7",
+    "bim-fragment": "^1.0.9",
     "camera-controls": "^2.3.3",
     "canvas": "^2.11.2",
     "clsx": "^1.2.1",
     "dexie": "^3.2.3",
+    "flatbuffers": "^23.3.3",
     "mapbox-gl": "^2.15.0",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
