--- a/src/docs-generator/tsconfig.json
+++ b/src/docs-generator/tsconfig.json
@@ -68,7 +68,10 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "typedocOptions": {
-    "entryPoints": ["../../temp/components/index.ts"],
+    "entryPoints": [
+      "../../temp/components/index.ts",
+      "../../temp/fragment/index.ts"
+    ],
     "out": "./docs",
     "readme": "../../README.md",
     "name": "Open BIM Components",
