--- a/src/docs-generator/tsconfig.json
+++ b/src/docs-generator/tsconfig.json
@@ -69,6 +69,7 @@
   },
   "typedocOptions": {
     "entryPoints": [
+      "../../temp/clay/index.ts",
       "../../temp/components/index.ts",
       "../../temp/fragment/index.ts"
     ],
