Integrate remaining packages (#5)
* Integrate "fragment" package

* Integrate "clay" package

* Integrate "web-ifc" package

* Upgrade docusaurus dependencies to v2.4.1

--- a/src/docs-generator/tsconfig.json
+++ b/src/docs-generator/tsconfig.json
@@ -68,7 +68,12 @@
     "forceConsistentCasingInFileNames": true  /* Disallow inconsistently-cased references to the same file. */
   },
   "typedocOptions": {
-    "entryPoints": ["../../temp/components/index.ts"],
+    "entryPoints": [
+      "../../temp/clay/index.ts",
+      "../../temp/components/index.ts",
+      "../../temp/fragment/index.ts",
+      "../../temp/web-ifc/web-ifc-api.ts"
+    ],
     "out": "./docs",
     "readme": "../../README.md",
     "name": "Open BIM Components",
