--- a/package.json
+++ b/package.json
@@ -20,16 +20,19 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.3.1",
-    "@docusaurus/preset-classic": "2.3.1",
+    "@docusaurus/core": "2.4.1",
+    "@docusaurus/preset-classic": "2.4.1",
     "@mdx-js/react": "^1.6.22",
     "@popperjs/core": "^2.11.7",
-    "bim-fragment": "^1.0.7",
+    "bim-fragment": "^1.0.9",
     "camera-controls": "^2.3.3",
     "canvas": "^2.11.2",
     "clsx": "^1.2.1",
     "dexie": "^3.2.3",
+    "earcut": "^2.2.4",
+    "flatbuffers": "^23.3.3",
     "mapbox-gl": "^2.15.0",
+    "openbim-components": "1.0.0-alpha.50",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -38,7 +41,8 @@
     "web-ifc": "^0.0.42"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.3.1",
+    "@docusaurus/module-type-aliases": "2.4.1",
+    "@types/earcut": "^2.1.1",
     "@types/mapbox-gl": "^2.7.11",
     "@types/node-fetch": "^2.6.4",
     "@types/three": "0.152.1",
