Refactor scripts and repo-copier.mjs before adding local build mode

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "generate-start": "yarn generate-docs && yarn start",
-    "generate-build": "yarn generate-docs && yarn build",
-    "generate-docs": "yarn clean && yarn copy-repos && yarn add-tutorials",
-    "add-tutorials": "node src/docs-generator/tutorial-generator.mjs",
+    "generate-build-local": "yarn generate-docs-local && yarn build",
+    "generate-build-remote": "yarn generate-docs-remote && yarn build",
+    "generate-docs-local": "yarn clean && yarn copy-repos-local && yarn add-tutorials",
+    "generate-docs-remote": "yarn clean && yarn copy-repos-remote && yarn add-tutorials",
     "clean": "node src/docs-generator/cleaner.mjs",
-    "copy-repos": "node src/docs-generator/repo-copier.mjs",
+    "copy-repos-local": "node src/docs-generator/repo-copier.mjs --local",
+    "copy-repos-remote": "node src/docs-generator/repo-copier.mjs --remote",
+    "add-tutorials": "node src/docs-generator/tutorial-generator.mjs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
