--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -25,7 +25,7 @@ jobs:
         run: yarn install
 
       - name: Build documentation
-        run: yarn generate-build
+        run: yarn generate-build-remote
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
