refactor(typedoc): set up workspaces configuration for documented repos

--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
   "name": "docs",
   "version": "0.0.0",
+  "packageManager": "yarn@4.0.0-rc.53",
   "private": true,
+  "workspaces": [
+    "temp/*"
+  ],
   "scripts": {
     "docusaurus": "docusaurus",
     "start": "docusaurus start",
     "build": "docusaurus build",
-    "generate-build-local": "yarn generate-docs-local && yarn build",
-    "generate-build-remote": "yarn generate-docs-remote && yarn build",
+    "generate-build-local": "yarn generate-docs-local && yarn workspaces focus -A && yarn build",
+    "generate-build-remote": "yarn generate-docs-remote && yarn workspaces focus -A && yarn build",
     "generate-docs-local": "yarn clean && yarn copy-repos-local && yarn add-tutorials",
     "generate-docs-remote": "yarn clean && yarn copy-repos-remote && yarn add-tutorials",
-    "clean": "node src/docs-generator/cleaner.mjs",
     "copy-repos-local": "node src/docs-generator/repo-copier.mjs --local",
     "copy-repos-remote": "node src/docs-generator/repo-copier.mjs --remote",
+    "clean": "node src/docs-generator/cleaner.mjs",
     "add-tutorials": "node src/docs-generator/tutorial-generator.mjs",
     "swizzle": "docusaurus swizzle",
     "deploy": "docusaurus deploy",
@@ -22,36 +26,17 @@
     "write-heading-ids": "docusaurus write-heading-ids"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.1",
-    "@docusaurus/preset-classic": "2.4.1",
+    "@docusaurus/core": "^2.4.3",
+    "@docusaurus/preset-classic": "^2.4.3",
     "@mdx-js/react": "^1.6.22",
-    "@popperjs/core": "^2.11.7",
-    "bim-fragment": "^1.0.9",
-    "camera-controls": "^2.3.3",
-    "canvas": "^2.11.2",
     "clsx": "^1.2.1",
-    "dexie": "^3.2.3",
-    "dxf-writer": "^1.18.4",
-    "earcut": "^2.2.4",
-    "flatbuffers": "^23.3.3",
-    "mapbox-gl": "^2.15.0",
-    "openbim-clay": "^1.0.0-alpha.1",
-    "openbim-components": "1.0.0-alpha.50",
     "prism-react-renderer": "^1.3.5",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "three": "0.152.2",
-    "three-mesh-bvh": "^0.5.23",
-    "web-ifc": "0.0.43"
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.1",
-    "@types/earcut": "^2.1.1",
-    "@types/mapbox-gl": "^2.7.11",
-    "@types/node-fetch": "^2.6.4",
-    "@types/three": "0.152.1",
-    "docusaurus-plugin-typedoc": "0.20.1",
-    "got": "^12.6.0",
+    "@docusaurus/module-type-aliases": "^2.4.3",
+    "docusaurus-plugin-typedoc": "0.20.2",
     "typedoc": "^0.25.1",
     "typedoc-plugin-markdown": "3.16.0",
     "typescript": "^5.0.2"
