Change yarn version to use 4.0.0 stable

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "docs",
   "version": "0.0.0",
-  "packageManager": "yarn@4.0.0-rc.53",
+  "packageManager": "yarn@4.0.0",
   "private": true,
   "workspaces": [
     "temp/*"
