--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,4 @@
 nodeLinker: node-modules
+enableTransparentWorkspaces: false
 
-yarnPath: .yarn/releases/yarn-4.0.0.cjs
+yarnPath: .yarn/releases/yarn-4.0.1.cjs
