fix: create new docs building workflow PRs when PR status is not OPEN

--- a/.github/workflows/update-docs-projects.yml
+++ b/.github/workflows/update-docs-projects.yml
@@ -59,7 +59,7 @@ jobs:
         if: steps.changes.outputs.changed == 'true'
         run: |
           PR_EXISTS=$(gh pr view actions-generate-docs --json state -q '.state' || echo "no")
-          if [ "$PR_EXISTS" = "no" ] || [ "$PR_EXISTS" = "CLOSED" ]; then
+          if [ "$PR_EXISTS" = "no" ] || [ "$PR_EXISTS" != "OPEN" ]; then
             gh pr create --base main --title "chore(docs): generate documentation" \
               --body "This is an auto-generated PR for documentation updates made by GitHub Actions." \
               --head actions-generate-docs
