--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "format": "prettier src/ --write"
+    "format": "prettier --write {docs,src}/**/*.{js,jsx,ts,tsx,md,mdx,json}"
   },
   "dependencies": {
     "@docusaurus/core": "^2.4.3",
