--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 # Dependencies
 /node_modules
-
-# Production
-/build
+/temp
 
 # Generated files
 .docusaurus
@@ -18,3 +16,12 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Yarn
+.yarn/.cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
+.pnp.*
+
+build.log
