--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "engine_docs",
   "version": "0.0.0",
+  "packageManager": "yarn@4.1.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -42,6 +43,6 @@
     ]
   },
   "engines": {
-    "node": ">=18.0"
+    "node": ">=20.11.1"
   }
 }
