--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "typecheck": "tsc"
+    "typecheck": "tsc",
+    "tutorials": "node src/docs-generator/tutorial-generator.mjs"
   },
   "dependencies": {
     "@docusaurus/core": "3.4.0",
